hphp/test/slow/unpack_args/unpack_call_error.php.expectf
Fatal error: Only the last parameter in a function call is allowed to use ... in %s/unpack_call_error.php on line 10
